--- a/scripts/app.json
+++ b/scripts/app.json
@@ -1,7 +1,7 @@
 {
     "eventos": [
     {
-        "nome": "Festival de Verão",
+        "nome": "Festival da Musica",
         "categoria": "Musica",
         "data": "12-12-2025",
         "preco": 89.99,
